Fix Vercel deployment compatibility for file operations
- Replaced pdf2json with pdfjs-dist (Vercel-compatible, no native dependencies)
- Added maxDuration config to all API routes (60s for chat/uploads, 30s for others)
- Improved error handling and logging for extraction failures
- Changed PDF extraction to use dynamic import instead of require
- Added DOCX extraction logging for better debugging
- Gracefully handles extraction failures on serverless environment

--- a/new-client/package.json
+++ b/new-client/package.json
@@ -29,6 +29,7 @@
     "openai": "^4.80.0",
     "pdf-parse": "^2.4.5",
     "pdf2json": "^4.0.0",
+    "pdfjs-dist": "^5.4.394",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-markdown": "^10.1.0",
