--- a/new-client/package.json
+++ b/new-client/package.json
@@ -22,6 +22,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jszip": "^3.10.1",
+    "html-to-text": "^9.0.5",
+    "fast-xml-parser": "^4.3.6",
+    "yaml": "^2.4.2",
+    "@iarna/toml": "^2.2.5",
     "lucide-react": "^0.554.0",
     "mammoth": "^1.11.0",
     "next": "16.0.3",
