--- a/new-client/package.json
+++ b/new-client/package.json
@@ -21,6 +21,10 @@
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "pako": "^2.1.0",
+    "tar-stream": "^3.1.7",
+    "tesseract.js": "^5.1.0",
+    "@ffmpeg/ffmpeg": "^0.12.10",
     "jszip": "^3.10.1",
     "html-to-text": "^9.0.5",
     "fast-xml-parser": "^4.3.6",
