--- a/new-client/package.json
+++ b/new-client/package.json
@@ -56,6 +56,7 @@
     "@types/react-dom": "^19",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/pako": "^2.0.0",
+    "@types/html-to-text": "^9.0.3",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
