--- a/new-client/package.json
+++ b/new-client/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.10",
+    "@iarna/toml": "^2.2.5",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
@@ -21,20 +23,15 @@
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "pako": "^2.1.0",
-    "tar-stream": "^3.1.7",
-    "tesseract.js": "^5.1.0",
-    "@ffmpeg/ffmpeg": "^0.12.10",
-    "jszip": "^3.10.1",
-    "html-to-text": "^9.0.5",
     "fast-xml-parser": "^4.3.6",
-    "yaml": "^2.4.2",
-    "@iarna/toml": "^2.2.5",
+    "html-to-text": "^9.0.5",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.554.0",
     "mammoth": "^1.11.0",
     "next": "16.0.3",
     "next-themes": "^0.4.6",
     "openai": "^4.80.0",
+    "pako": "^2.1.0",
     "pdfjs-dist": "^5.4.394",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -46,18 +43,22 @@
     "remark-math": "^6.0.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "tar-stream": "^3.1.7",
+    "tesseract.js": "^5.1.0",
     "tw-animate-css": "^1.4.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yaml": "^2.4.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/html-to-text": "^9.0.3",
     "@types/node": "^20",
+    "@types/pako": "^2.0.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "@types/pako": "^2.0.0",
-    "@types/html-to-text": "^9.0.3",
     "babel-plugin-react-compiler": "1.0.0",
+    "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "tailwindcss": "^4",
