--- a/new-client/package.json
+++ b/new-client/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.86.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
