--- a/new-client/package.json
+++ b/new-client/package.json
@@ -47,7 +47,8 @@
     "tar-stream": "^3.1.7",
     "tw-animate-css": "^1.4.0",
     "xlsx": "^0.18.5",
-    "yaml": "^2.4.2"
+    "yaml": "^2.4.2",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
