--- a/new-client/package.json
+++ b/new-client/package.json
@@ -66,6 +66,7 @@
     "typescript": "^5"
   },
   "optionalDependencies": {
-    "canvas": "^3.2.0"
+    "canvas": "^3.2.0",
+    "@napi-rs/canvas": "^0.1.83"
   }
 }
