--- a/new-client/package.json
+++ b/new-client/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "fast-xml-parser": "^4.3.6",
     "html-to-text": "^9.0.5",
+    "js-tiktoken": "^1.0.21",
     "jszip": "^3.10.1",
     "lucide-react": "^0.554.0",
     "mammoth": "^1.11.0",
