--- a/new-client/package.json
+++ b/new-client/package.json
@@ -43,6 +43,7 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
+    "swr": "^2.3.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "tar-stream": "^3.1.7",
@@ -67,7 +68,7 @@
     "typescript": "^5"
   },
   "optionalDependencies": {
-    "canvas": "^3.2.0",
-    "@napi-rs/canvas": "^0.1.83"
+    "@napi-rs/canvas": "^0.1.83",
+    "canvas": "^3.2.0"
   }
 }
