--- a/new-client/package.json
+++ b/new-client/package.json
@@ -31,6 +31,7 @@
     "jszip": "^3.10.1",
     "lucide-react": "^0.554.0",
     "mammoth": "^1.11.0",
+    "music-metadata": "^11.10.3",
     "next": "16.0.7",
     "next-themes": "^0.4.6",
     "openai": "^4.80.0",
