--- a/new-client/package.json
+++ b/new-client/package.json
@@ -11,62 +11,61 @@
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.12.10",
     "@iarna/toml": "^2.2.5",
-    "@napi-rs/canvas": "^0.1.84",
+    "@napi-rs/canvas": "^0.1.86",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
-    "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "^2.86.0",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.89.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/forms": "^0.5.11",
     "@tailwindcss/typography": "^0.5.19",
-    "@vercel/analytics": "^1.5.0",
+    "@vercel/analytics": "^1.6.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fast-xml-parser": "^4.3.6",
     "html-to-text": "^9.0.5",
     "js-tiktoken": "^1.0.21",
     "jszip": "^3.10.1",
-    "lucide-react": "^0.554.0",
+    "lucide-react": "^0.562.0",
     "mammoth": "^1.11.0",
     "music-metadata": "^11.10.3",
-    "next": "16.0.7",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "openai": "^6.15.0",
     "pako": "^2.1.0",
-    "pdfjs-dist": "^5.4.394",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "pdfjs-dist": "^5.4.449",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^16.1.0",
     "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
-    "swr": "^2.3.7",
+    "swr": "^2.3.8",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "tar-stream": "^3.1.7",
     "tw-animate-css": "^1.4.0",
-    "xlsx": "^0.18.5",
-    "yaml": "^2.4.2",
-    "zod": "^3.25.8"
+    "yaml": "^2.8.2",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/html-to-text": "^9.0.3",
-    "@types/node": "^20",
+    "@types/node": "^20.19.27",
     "@types/pako": "^2.0.0",
-    "@types/react": "^19",
+    "@types/react": "^19.2.7",
     "@types/react-dom": "^19",
     "@types/react-syntax-highlighter": "^15.5.13",
     "babel-plugin-react-compiler": "1.0.0",
-    "baseline-browser-mapping": "^2.8.32",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.7",
-    "tailwindcss": "^4",
+    "baseline-browser-mapping": "^2.9.11",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.1",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5"
   },
   "optionalDependencies": {
