--- a/new-client/package.json
+++ b/new-client/package.json
@@ -39,6 +39,7 @@
     "openai": "^6.15.0",
     "pako": "^2.1.0",
     "pdfjs-dist": "^5.4.449",
+    "playwright": "^1.51.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
