--- a/new-client/package.json
+++ b/new-client/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postinstall": "node scripts/install-playwright.js"
   },
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.12.10",
