--- a/new-client/package.json
+++ b/new-client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "node scripts/install-playwright.js && next build",
     "start": "next start",
     "lint": "eslint",
     "postinstall": "node scripts/install-playwright.js"
