--- a/new-client/package.json
+++ b/new-client/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "node scripts/install-playwright.js && next build",
     "start": "next start",
-    "lint": "eslint",
-    "postinstall": "node scripts/install-playwright.js"
+    "lint": "eslint"
   },
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.12.10",
