Add Stripe webhook billing enforcement

--- a/new-client/package.json
+++ b/new-client/package.json
@@ -18,6 +18,8 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@sparticuz/chromium": "^127.0.0",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.6.1",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
